--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -5,6 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"build": "tsc",
+		"start": "node ./dist/index.js",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"keywords": [],
@@ -15,6 +16,7 @@
 		"express": "^5.1.0"
 	},
 	"devDependencies": {
+		"@types/express": "^5.0.2",
 		"typescript": "^5.8.3"
 	}
 }
