--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
-  "name": "das-allatorvosi-horse",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "packageManager": "pnpm@10.11.1"
+	"name": "das-allatorvosi-horse",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"build": "turbo run build",
+		"start:backend": "turbo run --filter backend start",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"packageManager": "pnpm@10.11.1",
+	"devDependencies": {
+		"turbo": "^2.5.4"
+	}
 }
