chore(frontend): add initial frontend
Signed-off-by: markkovari <kovarimarkofficial@gmail.com>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -31,3 +31,5 @@ jobs:
           cache: 'pnpm'
       - name: Install dependencies
         run: pnpm install
+      - name: Run build
+        run: pnpm run build
