--- a/turbo.json
+++ b/turbo.json
@@ -10,7 +10,9 @@
 			"cache": false
 		},
 		"start": {
-			"dependsOn": ["build"]
+			"dependsOn": ["build"],
+			"cache": false,
+			"persistent": false
 		}
 	}
 }
