--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -13,7 +13,8 @@
 	"license": "ISC",
 	"packageManager": "pnpm@10.11.1",
 	"dependencies": {
-		"express": "^5.1.0"
+		"express": "^5.1.0",
+		"zod": "^3.25.55"
 	},
 	"devDependencies": {
 		"@types/express": "^5.0.2",
