--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -13,10 +13,12 @@
 	"license": "ISC",
 	"packageManager": "pnpm@10.11.1",
 	"dependencies": {
+		"cors": "^2.8.5",
 		"express": "^5.1.0",
 		"zod": "^3.25.55"
 	},
 	"devDependencies": {
+		"@types/cors": "^2.8.18",
 		"@types/express": "^5.0.2",
 		"typescript": "^5.8.3"
 	}
