--- a/.github/workflows/infra.yaml
+++ b/.github/workflows/infra.yaml
@@ -33,7 +33,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: hashicorp/setup-terraform@v3
         with:
-          terraform_version: 1.5.7
+          terraform_version: "1.5.7"
       - run: terraform init
       - name: run fmt
         run: terraform fmt
