--- a/.github/workflows/infra.yaml
+++ b/.github/workflows/infra.yaml
@@ -16,6 +16,7 @@ env:
   TF_do_token: ${{ secrets.DO_TOKEN }}
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  TF_LOGS: trace
 jobs:
   setup-envs:
     runs-on: ubuntu-latest
