--- a/.github/workflows/infra.yaml
+++ b/.github/workflows/infra.yaml
@@ -35,7 +35,7 @@ jobs:
       - uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: "1.5.7"
-      - run: terraform init
+      - run: terraform init -migrate-state
       - name: run fmt
         run: terraform fmt
 
