--- a/.github/workflows/infra.yaml
+++ b/.github/workflows/infra.yaml
@@ -32,9 +32,15 @@ jobs:
         working-directory: "./infra/${{matrix.envs}}"
     steps:
       - uses: actions/checkout@v4
+      - name: Install doctl
+        uses: digitalocean/action-doctl@v2
+        with:
+          token: ${{ secrets.DO_TOKEN }}
       - uses: hashicorp/setup-terraform@v3
+    
         with:
           terraform_version: "1.5.7"
+
       - run: terraform init -migrate-state
       - name: run fmt
         run: terraform fmt
