chore(do): trigger deploy
Signed-off-by: markkovari <kovarimarkofficial@gmail.com>

--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/checkout@v4 # Action to checkout your repository code
 
       - name: Deploy to DigitalOcean App Platform
-        uses: digitalocean/app_platform_deploy_action@v1.2.0 # Official DO deploy action
+        uses: digitalocean/app_action/deploy@v2
         with:
           # REQUIRED: Your DigitalOcean API token. Stored as a GitHub Secret.
           do_token: ${{ secrets.DO_TOKEN }}
